...
        android:textColor="#ad1457"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/image_nfc"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editText_login"
        app:layout_constraintVertical_bias="0.857" />

    <Button
        android:id="@+id/button_login"
        android:layout_width="0dp"
        android:layout_height="63dp"
        android:layout_marginBottom="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginTop="8dp"
...
