...

    <string name="loginText">Verbinde dich über Wifi\n mit dem Roboter.</string>
    <string name="btloginText">Verbinde mich!</string>
    <string name="loginIP">IP</string>
    <string name="loginNFCon">Jej! Dein Gerät unterstützt NFC. \nLege es neben den NFC Tag um die IP-Adresse auszulesen.</string>
    <string name="loginNFCoff">Dein Gerät unterstützt kein NFC.</string>
    <string name="loginErrorIP">Leider ist die IP nicht korrekt.</string>
    <string name="loginFalseTag">Tag konnte leider nicht gelesen werden.\nÜberprüfe den Inhalt.</string>


    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="manual_intensity">1:\tMit dem Slider können \n fünf verschiedene \n Geschwindigkeiten eingestellt werden</string>
...
